Update Journal and Process html with new nav bar
some edits in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -679,6 +679,26 @@ td {
   font-size: 0.7rem;
 }
 
+/***** HOMEPAGE *****/
+
+
+
+/***** SHOP - MULTIPLE PRODUCTS *****/
+
+
+
+/***** SHOP - DETAILED PRODUCT *****/
+
+
+
+/***** JOURNAL *****/
+
+
+
+/***** PROCESS / ABOUT PAGE *****/
+
+
+
 /***** VIEWPORTS *****/
 
 @media (min-width: 55em) {
