--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,7 @@ div {
 
 body {
   font-family: "Europa", sans-serif;
-  /*
-  margin: 2rem;
-  padding: 2rem;
-  */
+  /* background: #FAFAF9; */
 	font-size: 0.85rem;
 }
 
@@ -110,11 +107,13 @@ input[type="text"]:focus {
   margin-bottom: 1rem;
 }
 
-#multiple_products .container, #individual_product .container,
-#checkout_cart .container, #payment_order_form .container {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+.content_container #multiple_products, .content_container #individual_product,
+.content_container #checkout_cart, .content_container #payment_order_form {
+  width: 100%;
+  /* background-color: lightyellow; */
 }
+
+
 
 /***** PAGE NAVIGATION *****/
 
@@ -147,6 +146,8 @@ input[type="text"]:focus {
 .main_nav_item:active, .main_nav_item:hover, .main_nav_item:focus {
   color: #FFB523;
 }
+
+
 
 /***** INTERACTIVE ELEMENTS *****/
 
@@ -280,13 +281,16 @@ input[type="radio"]:hover:after {
 
 /* this a container that holds the page body content */
 .content_container {
-  width: 75%;
+  width: 95%;
+  overflow: hidden;
   /*margin: 0 auto;*/
   flex-grow: 1;
 
   margin: 1.5rem;
   padding: 1.5rem;
 }
+
+
 
 /***** COLOUR PALETTE *****/
 
@@ -345,6 +349,8 @@ input[type="radio"]:hover:after {
   vertical-align: middle;
 }
 
+
+
 /***** OLDERBROTHER NAVIGATION *****/
 
 #logo-wordmark {
@@ -359,7 +365,6 @@ input[type="radio"]:hover:after {
 #global_nav {
   position: relative;
   padding: 0.5rem;
-  background: #FFF;
   border-bottom: 1px solid #EEE;
 }
 
@@ -378,20 +383,23 @@ input[type="radio"]:hover:after {
   display: block;
 }
 
+
+
 /***** PRODUCT PAGES - MULTIPLE *****/
 
 .block {
   flex-grow: 1;
   flex-basis: 12rem;
   margin: 1rem;
-  width: 50%;
+  display: inline-block;
+  /* width: 50%; */
 }
 
 
 .image-link {
   position: relative;
   display: inline-block;
-  width: 90%;
+  width: 100%;
 }
 
 .image-link .hover-img {
@@ -400,7 +408,7 @@ input[type="radio"]:hover:after {
   left: 0;
   top: 0;
   z-index: 99;
-  background-color: #F9F7F2;
+  background-color: #F5F5F2; /* #E5E5E1; */
 }
 
 .image-link:hover .hover-img {
@@ -416,27 +424,44 @@ input[type="radio"]:hover:after {
   font-size: 0.85rem;
 }
 
-/***** PRODUCT PAGE - DETAIL *****/
+
+
+/***** SHOP - DETAILED PRODUCT *****/
+
+#individual_product {
+  text-align: center;
+}
+
+#individual_product .block {
+  width: 40%;
+}
 
 .product_image {
-  background-color: #F9F7F2;
+  background-color: #F5F5F2; /* #E5E5E1; */
   padding: 1rem;
   width: 100%;
 }
 
 .product_name {
   margin-top: 0;
-  margin-bottom: -0.5rem;
+  margin-bottom: -0.8rem;
+  text-align: left;
+}
+
+.product_clr {
+  font-size: 0.9rem;
 }
 
 .product_details {
   padding: 10% 0;
   margin-top: 0;
-  width: 15rem;
+  /* width: 15rem; */
+  text-align: left;
 }
 
 .product_desc {
   margin-top: 1.5rem;
+  width: 90%;
 }
 
 .price {
@@ -448,7 +473,7 @@ input[type="radio"]:hover:after {
 }
 
 .product_select {
-  width: 5rem;
+  width: 8rem;
   margin-right: 0.8rem;
 }
 
@@ -467,7 +492,8 @@ input[type="radio"]:hover:after {
 }
 
 .atc-btn {
-  padding: 0.75rem 5rem;
+  /* padding: 0.75rem 5rem; */
+  padding: 0.75rem 35%;
   margin-top: 1.75rem;
 }
 
@@ -478,11 +504,17 @@ input[type="radio"]:hover:after {
   transition: 0.5s ease-out;
 }
 
+
+
 /***** PAYMENT FORM *****/
+
+.order_summary, .payment_form {
+  align-items: flex-start;
+}
 
 .order_summary {
   width: 100%;
-  margin: 0.2rem 0rem 0.2rem 0rem;
+  margin: 0.2rem 0rem;
   background-color: #FAFAF9;
   padding: 0.8rem 2rem;
 }
@@ -552,7 +584,7 @@ input[type="radio"]:hover:after {
 
 .payment_form {
   width: 100%;
-  margin: 0.2rem 0rem 0.2rem 0rem;
+  margin: 0.2rem 0rem;
   background-color: #FAFAF9;
   padding: 0.8rem 2rem;
 }
@@ -611,6 +643,8 @@ select {
   border: 1px solid darkgray;
 }
 
+
+
 /***** CHECKOUT CART *****/
 
 table {
@@ -648,21 +682,25 @@ td {
 
 .checkout_quantity, .checkout_price {
   text-align: center;
+  width: 15%;
 }
 
 .checkout_product {
   flex-grow: 1;
+  width: 100%;
   margin: 1.5rem 1rem 1.5rem 0;
 }
 
 .checkout_prod_img {
-  width: 12rem;
+  width: 40%;
+  height: 40%;
+  /* width: 12rem; /* 12rem; */
   background-color: #F9F7F2;
   padding: 0.7rem;
 }
 
 .checkout_product_info {
-  padding: 10% 0;
+  padding: 15% 0;
   margin-left: 1rem;
   width: 40%;
 }
@@ -685,15 +723,18 @@ td {
   font-size: 0.7rem;
 }
 
+.pay_form_btns {
+  padding-top: 1.5rem;
+  float: right;
+}
+
+
+
 /***** HOMEPAGE *****/
 
 
 
 /***** SHOP - MULTIPLE PRODUCTS *****/
-
-
-
-/***** SHOP - DETAILED PRODUCT *****/
 
 
 
@@ -709,7 +750,19 @@ td {
 
 @media (min-width: 55em) {
   .block {
-    width: 40%;
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 1155px) {
+  .block {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 825px) {
+  .block {
+    width: 42.5%;
   }
 }
 
@@ -724,8 +777,9 @@ td {
 }
 /* Tablet View */
 @media screen and (max-width: 992px) {
-  .container {
-    width: 90%;
+  .content_container {
+    margin: 0.3rem;
+    width: 95%;
   }
 
   .mobile_nav {
@@ -741,36 +795,121 @@ td {
     width: 10%;
     margin-top: -0.6rem;
   }
+
+  #individual_product .block {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  #individual_product .block {
+    width: 90%;
+  }
+
+  .pay_form_btns {
+    /* center align in mobile view */
+  }
+
+  .checkout_product_info {
+    padding: 10% 0;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .content_container {
+    width: 95%;
+  }
+
+  .block {
+    width: 90%;
+  }
+
+  .price {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .checkout_product_info {
+    padding: 5% 0;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .block {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .checkout_product_info {
+    padding: 2% 0;
+  }
+
+  .checkout_product_name {
+    font-size: 0.9rem;
+  }
 }
 
 /* Mobile View */
-@media screen and (max-width: 700px) {
-  .container {
+@media screen and (max-width: 414px) {
+  .block {
+    width: 90%;
+  }
+
+  .content_container {
+    margin: 0;
+    width: 95%;
+  }
+
+  #individual_product .block {
     width: 100%;
   }
 
-  .product_details {
-    padding: 0;
+  .product_image {
+    width: 95%;
+    margin-bottom: 0;
   }
 
-  .checkout_product {
-    height: 5rem;
+  .product_name {
+    font-size: 1.5rem;
+  }
+
+  .price {
+    font-size: 0.85rem;
+  }
+
+  .product_details {
+    width: 100%;
+    margin-top: -2.5rem;
+  }
+
+  .product_select {
+    width: 8rem;
+  }
+
+  .atc-btn {
+    padding: 0.75rem 32.5%;
   }
 
   .checkout_prod_img {
-    width: 5rem;
+    width: 45%;
+    height: 45%;
     padding: 0.5rem;
     vertical-align: center;
   }
 
   .checkout_product_info {
     padding: 0;
-    margin-left: 0.5rem;
     width: 100%;
   }
 
-  .checkout_product_name {
-    font-size: 1rem;
+  .checkout_product_color {
+    font-size: 0.6rem;
+  }
+
+  .checkout_quantity, .checkout_price {
+    width: 1rem;
   }
 
   .main_nav_item {
