--- a/css/main.css
+++ b/css/main.css
@@ -766,6 +766,30 @@ td {
 
 /***** PROCESS / ABOUT PAGE *****/
 
+*{
+  box-sizing: border-box;
+}
+
+#about{
+  display: grid;
+  grid-gap: 45px;
+	grid-template-columns: 30% 70%;
+  border:1px black;
+}
+
+#about-detail table{
+  width:50% 50%;
+}
+#about-detail img{
+  width: 20rem;
+  height:30rem;
+}
+
+.about-img{
+  width:20rem;
+  height:20rem;
+}
+
 
 
 /***** VIEWPORTS *****/
