--- a/css/main.css
+++ b/css/main.css
@@ -912,19 +912,40 @@ footer{
   border:1px black;
 }
 
+#about-detail{
+  margin: 2rem;
+}
+
 #about-detail table{
   width:50% 50%;
+  border-collapse: separate;
+  border-spacing: 40px 5px;
 }
+
 #about-detail img{
-  width: 20rem;
+  width: 30rem;
   height:30rem;
+  margin-top: 2rem;
 }
 
-.about-img{
-  width:20rem;
-  height:20rem;
+
+#about-detail p{
+  margin-top: 2rem;
 }
 
+#about-img-item img{
+  width:auto;
+  height: auto;
+}
+
+#map{
+  margin-top: 2rem;
+}
+iframe{
+  width: 60rem;
+  height: 30rem;
+  border-color: white;
+}
 
 
 /***** VIEWPORTS *****/
